<resources>
    <string name="app_name">YuMMy Eats</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="cancel">CANCEL</string>
    <string name="login">LOGIN</string>
    <string name="not_member">Not a Member?</string>
    <string name="register">REGISTER</string>
    <string name="newOrder">NEW ORDER</string>
    <string name="pastOrder">PAST ORDER</string>
    <string name="delivery">DELIVERIES</string>
    <string name="canceled">CANCELLED</string>
    <string name="profile">MY PROFILE</string>
    <string name="newOrder_hint">Create New Order</string>
    <string name="postOrder_hint">View Post Order</string>
    <string name="delivery_hint">Pending Deliveries</string>
    <string name="cancel_hint">Canceled Orders</string>
    <string name="profile_hint">View My Profile</string>
    <string name="orders">Orders</string>
    <string name="ratings">Ratings</string>
    <string name="cancel_orders">Canceled</string>
    <string name="already_member">Already Member? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm">Enter Password Again</string>
    <string name="signup">SIGNUP</string>
    <string name="remember">Remember Me</string>
    <string name="enter_code">OTP Verification</string>
    <string name="verify">VERIFY NOW</string>
    <string name="email_exp">text@gmail.com</string>
    <string name="enter_code_hint">We will send you an one time OTP Code in your Email</string>
    <string name="otp">Dont Recive the OTP?</string>
    <string name="resend">RESEND OTP</string>
    <string name="send_code">SEND OTP</string>
    <string name="enter_hint">Enter the OTP send to-</string>
    <string name="otp_hint">X</string>
    <string name="view">View Order</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="order_status">Order Status</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Quantity</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="full_price">Full Price</string>
    <string name="accept">Accept Order</string>
    <string name="delete">Delete Order</string>

</resources>