<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    >


    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/app_name"-->
    <!--        android:textSize="30sp"-->
    <!--        android:background="@color/dark_primary"-->
    <!--        android:textColor="@color/text"-->
    <!--        android:padding="15sp"-->
    <!--        >-->
    <!--    </TextView>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:src="@drawable/logo"
        android:padding="15sp"
        >
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/email"
        android:textSize="20sp"
        android:padding="10sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:hint="@string/email_hint"
        android:padding="10sp"
        android:textSize="15sp"
        >
    </EditText>
//Password
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/password"
        android:textSize="20sp"
        android:padding="10sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:hint="@string/password_hint"
        android:padding="10sp"
        android:textSize="15sp"
        >
    </EditText>
//Confirm Password
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/confirm_password"
        android:textSize="15sp"
        android:padding="10sp"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:hint="@string/hint_confirm"
        android:padding="10sp"
        android:textSize="18sp"
        >
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:layout_marginTop="60sp">

        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/primary_bg"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginRight="5sp"
            >
        </Button>
        <Button
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@color/colorGreen"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:layout_marginLeft="5sp"
            android:onClick="verificationCenter"
            >
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/already_member"
        android:layout_marginTop="20sp"
        android:textAlignment="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="18sp"
        android:onClick="signinActivity">
    </TextView>


</LinearLayout>