<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_hint"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="30sp"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="50sp"
        ></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="30sp"
        android:layout_height="wrap_content"
        android:hint="@string/email_exp"
        >
    </EditText>

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:background="@color/colorBlue"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:layout_margin="60sp"
        android:onClick="verifyOTP"
        android:gravity="center"
        >
    </Button>

</LinearLayout>