<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30sp"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="40sp"
            android:text="@string/enter_hint"
            android:textColor="@color/text"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginTop="20sp"
            ></TextView>
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="40sp"
            android:text="pdnc@gmail.com"
            android:textColor="@color/colorBlue"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>
        <EditText
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/otp_hint"
            android:textAlignment="center"
            android:textSize="20sp">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/otp"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@color/dark_primary"
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            ></TextView>
    </LinearLayout>
    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:background="@color/colorBlue"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:layout_margin="60sp"
        android:onClick="verifyUser"
        >
    </Button>


    ></LinearLayout>