<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">
        //New Order
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:onClick="newOrder">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_local_dining_24"
                android:background="@drawable/bg1"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newOrder"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="5sp"
                android:textColor="@color/accent"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/black"
                >
            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newOrder_hint"
                android:textAlignment="center"
                android:paddingTop="20sp"
                >
            </TextView>

        </LinearLayout>

        //Past Order
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:onClick="pastOrder">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_assignment_24"
                android:background="@drawable/bg2"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastOrder"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="5sp"
                android:textColor="@color/accent"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/black"
                >
            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postOrder_hint"
                android:textAlignment="center"
                android:paddingTop="20sp"
                >
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_local_shipping_24"
                android:background="@drawable/bg3"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="5sp"
                android:textColor="@color/accent"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/black"
                >
            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_hint"
                android:textAlignment="center"
                android:paddingTop="20sp"
                >
            </TextView>

        </LinearLayout>

        //Past Order
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_cancel_24"
                android:background="@drawable/bg4"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canceled"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="5sp"
                android:textColor="@color/accent"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/black"
                >
            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_hint"
                android:textAlignment="center"
                android:paddingTop="20sp"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">
        //Past Order
        <LinearLayout
            android:onClick="nextActivity"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_face_24"
                android:background="@drawable/bg5"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="5sp"
                android:textColor="@color/accent"
                >
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/black"
                >
            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_hint"
                android:textAlignment="center"
                android:paddingTop="20sp"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>