<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_margin="20sp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorBlue"
        >
    </TextView>
    //Line 1
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        >
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                >
            </TextView>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="2020-06-12"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/cardview_light_background"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                >
            </TextView>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Nadeesha Pathiraja"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/cardview_light_background"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>
    //Line 2
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        >
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                >
            </TextView>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="0768352207"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/cardview_light_background"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/colorGreen"
                >
            </TextView>
            <TextView
                android:layout_width="0sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="No 49, Nayadola Mahagama "
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/cardview_light_background"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_status"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/colorBlue"
        android:layout_marginTop="20sp"
        >
    </TextView>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/item_name"
                android:gravity="center"
                android:layout_weight="2"
                android:textColor="@color/accent"
                />
            <TextView
                android:text="@string/qty"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/accent"
                />
            <TextView
                android:text="@string/price"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/accent"
                />
        </TableRow>
        //Chane after set database
        <TableRow
            android:layout_marginTop="10sp">
            <TextView
                android:text="item 1"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="12sp"
                />
            <TextView
                android:text="2"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
            <TextView
                android:text="200"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="10sp">
            <TextView
                android:text="item 2"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="12sp"
                />
            <TextView
                android:text="3"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
            <TextView
                android:text="100"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="10sp">
            <TextView
                android:text="item 3"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="12sp"
                />
            <TextView
                android:text="1"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
            <TextView
                android:text="500"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="10sp">
            <TextView
                android:text="item 4"
                android:gravity="center"
                android:layout_weight="2"
                android:textSize="12sp"
                />
            <TextView
                android:text="2"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
            <TextView
                android:text="120"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="20sp">
            <TextView
                android:text="@string/total"
                android:gravity="center"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textColor="@color/colorBlue"
                />

            <TextView
                android:text="920.00"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorBlue"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:text="@string/delete"
        android:onClick="sendPast"
        android:background="@color/dark_primary"
        >
    </Button>

</LinearLayout>

